# democracy

./: CHANGELOG.md  README.md  democracy.cabal
app/: Api.hs  Main.hs  Rest.hs  Stack.hs
app/Api/: Types.hs
app/Pages/: Common.hs  Create.hs  Register.hs  Results.hs  SignIn.hs  Vote.hs  Welcome.hs
app/Stack/: Database.hs  Email.hs  Env.hs  Error.hs  Logger.hs  Password.hs  Server.hs
static/: create.js  style.css
